--- a/charts/wireguard/Chart.yaml
+++ b/charts/wireguard/Chart.yaml
@@ -3,7 +3,7 @@ name: wireguard
 description: "Using the offical linuxserver/wireguard image with almost any environment variables for K8S. Supporting server and client mode."
 type: application
 version: 0.1.16
-appVersion: 1.0.20250521
+appVersion: 1.0.20250521-r0-ls88
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wireguard/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
@@ -22,12 +22,12 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
-    - kind: fixed
-      description: "Pinned chart version"
+    - kind: changed
+      description: "Pinned wireguard version to schema 1.0.20250521-r0-ls88"
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wireguard
-      image: docker.io/linuxserver/wireguard:1.0.20250521
+      image: docker.io/linuxserver/wireguard:1.0.20250521-r0-ls88
 keywords:
   - wireguard
   - vpn
