--- a/renovate.json
+++ b/renovate.json
@@ -24,31 +24,23 @@
             ],
             "datasourceTemplate": "docker",
             "depNameTemplate": "linuxserver/wireguard",
-            "versioningTemplate": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$"
+            "versioningTemplate": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$",
+            "extractVersionTemplate": "^(?<version>.+)$"
         }
     ],
     "packageRules": [
         {
             "matchManagers": [
-                "helm-values"
+                "helm-values",
+                "regex"
             ],
             "matchPackageNames": [
                 "linuxserver/wireguard",
                 "/^docker\\.io\\/linuxserver\\/wireguard$/"
             ],
             "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$",
-            "description": "Handle linuxserver wireguard tags with -rX-lsY suffix"
-        },
-        {
-            "matchManagers": [
-                "regex"
-            ],
-            "matchPackageNames": [
-                "linuxserver/wireguard"
-            ],
-            "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$",
             "groupName": "linuxserver/wireguard",
-            "description": "Handle linuxserver wireguard appVersion in Chart.yaml with full version including -rX-lsY suffix"
+            "description": "Handle linuxserver wireguard updates with full version including -rX-lsY suffix"
         },
         {
             "matchManagers": [
