--- a/charts/wordpress/templates/secret.yaml
+++ b/charts/wordpress/templates/secret.yaml
@@ -9,7 +9,7 @@ metadata:
 type: Opaque
 data:
   WORDPRESS_TABLE_PREFIX: {{ .Values.wordpress.tablePrefix | b64enc }}
-  {{- if .Values.wordpress.configExtra }}
+  {{- if and .Values.wordpress.configExtra (not .Values.wordpress.configExtraConfigMap.name) (not .Values.wordpress.configExtraSecret.name) }}
   {{- $configextra := .Values.wordpress.configExtra }}
   {{- $url := .Values.wordpress.url }}
   {{/* If memcached is enabled and createconfig is true, append PHP memcached servers array */}}
