--- a/charts/wordpress/values.yaml
+++ b/charts/wordpress/values.yaml
@@ -249,12 +249,31 @@ wordpress:
 
   ## @param wordpress.configExtra string Custom values for wp-config.php
   # custom values for wp-config.php see: https://developer.wordpress.org/advanced-administration/wordpress/wp-config/
+  ## NOTE: WP_HOME and WP_SITEURL will be added automatically based on wordpress.url
   # configExtra: |-
   #   define('WP_MEMORY_LIMIT', '256M');
   #   define('WP_MAX_MEMORY_LIMIT', '512M');
   #   define('FORCE_SSL_ADMIN', false);
   #   define('WP_CACHE', true);
   configExtra: ""
+
+  ## section wordpress.configExtraConfigMap object ConfigMap for extra wp-config.php values
+  ## If you set this, the wordpress.configExtra will be ignored
+  ## NOTE: You have to set WP_HOME and WP_SITEURL yourself in the ConfigMap
+  configExtraConfigMap:
+    ## @param wordpress.configExtraConfigMap.name string Name of existing ConfigMap
+    name: ""
+    ## @param wordpress.configExtraConfigMap.key string Key in ConfigMap containing extra wp-config.php values
+    key: "wordpress.configExtra"
+
+  ## section wordpress.configExtraSecret object Secret for extra wp-config.php values
+  ## If you set this, the wordpress.configExtra and wordpress.configExtraConfigMap will be ignored
+  ## NOTE: You have to set WP_HOME and WP_SITEURL yourself in the Secret
+  configExtraSecret:
+    ## @param wordpress.configExtraSecret.name string Name of existing Secret
+    name: ""
+    ## @param wordpress.configExtraSecret.key string Key in Secret containing extra wp-config.php values
+    key: "wordpress.configExtra"
 
   ## @param wordpress.htaccess string Custom .htaccess file
   ## if metrics.apache.createConfig is true, the modrewrite of server-status will be added automatically before all other rules
