--- a/renovate.json
+++ b/renovate.json
@@ -34,11 +34,23 @@
                 "^charts/wordpress/Chart\\.yaml$"
             ],
             "matchStrings": [
-                "(?s)repository:\\s*lusotycoon/apache-exporter[\\s\\S]*?digest:\\s*\\\"(?<currentValue>sha256:[a-fA-F0-9]{64})\\\""
+                "(?s)repository:\\s*lusotycoon/apache-exporter[\\s\\S]*?digest:\\s*\"?(?<currentValue>sha256:[a-fA-F0-9]{64})\"?"
             ],
             "datasourceTemplate": "docker",
             "depNameTemplate": "docker.io/lusotycoon/apache-exporter",
             "versioningTemplate": "digest",
+            "extractVersionTemplate": "^(?<version>.+)$"
+        },
+        {
+            "fileMatch": [
+                "^charts/wordpress/Chart\\.yaml$"
+            ],
+            "matchStrings": [
+                "image:\\s*lusotycoon/apache-exporter:v(?<currentValue>\\d+\\.\\d+\\.\\d+)"
+            ],
+            "datasourceTemplate": "docker",
+            "depNameTemplate": "docker.io/lusotycoon/apache-exporter",
+            "versioningTemplate": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$",
             "extractVersionTemplate": "^(?<version>.+)$"
         }
     ],
