--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wordpress
 description: "Using the official WordPress image. This chart provides automation for installation, user management, plugin installation, and metrics."
 type: application
-version: 0.3.2
+version: 0.4.0
 appVersion: "6.8.3"
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wordpress/app.png
 home: https://github.com/slydlake/helm-charts
@@ -27,10 +27,11 @@ annotations:
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
     - kind: changed
-      description: "[helm] chore(deps): update chart dependencies mariadb Docker tag to v0.5.2"
-      links:
-        - name: Pull Request
-          url: https://github.com/slydlake/helm-charts/pull/35
+      description: "refactor: updated liveness, readiness, and startup probe timings for better stability"
+    - kind: changed
+      description: "fix: pod restart when updating configmaps via checksums"
+    - kind: changed
+      description: "refactor: removed .digest values from image definitions for CI pipeline compatibility. Use image tags with digests instead."
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wordpress
@@ -38,7 +39,7 @@ annotations:
     - name: wordpress-cli
       image: docker.io/wordpress:cli-2.12.0-php8.1
     - name: metrics-apache
-      image: lusotycoon/apache-exporter:v1.0.10
+      image: docker.io/lusotycoon/apache-exporter:v1.0.10
     - name: mariadb
       image: docker.io/mariadb:12.0.2-noble
     - name: memcached
