changed: renovate - added 'regex' to matchManagers for improved versioning

--- a/renovate.json
+++ b/renovate.json
@@ -83,7 +83,8 @@
         },
         {
             "matchManagers": [
-                "helm-values"
+                "helm-values",
+                "regex"
             ],
             "versioning": "docker",
             "labels": [
